--- a/resume.css
+++ b/resume.css
@@ -46,9 +46,15 @@
 	background: #E6ECF0;
   padding-top: 20px;
   padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .formation {
 	background: #E6ECF0;
+   margin-right: 0px;
+}
+.formation span {
+  padding:10px;
 }
 .job {
 	background: #E6ECF0;
@@ -64,4 +70,49 @@
 .addr {
   display: inline-block;
   width: 90%;
+  line-height: 1.2em;
+}
+.circle-icon {
+
+  border: solid 1px black;
+  border-radius: 50%;
+  padding:5px; 
+}
+
+/* TIME LINE */
+.diplome {
+  
+  border-left: 3px solid black;
+  display: inline-block;
+  margin-left: 10%;
+
+}
+.diplome > div {
+  display: inline-block;
+}
+.date{
+  margin-left: -3em;
+}
+.circle {
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background: black;
+  margin-left: 0px;
+}
+.name {
+
+  background: #F1F4F6;
+  text-align: center;
+  width: 80%;
+}
+.spec {
+
+  margin-left: 5%;
+  width: 80%;
+}
+.address {
+
+  margin-left: 5%;
+  width: 50%;
 }
