--- a/resume.css
+++ b/resume.css
@@ -1,4 +1,3 @@
-
 .container {
 
   background: #c9c9c9;
@@ -32,11 +31,18 @@
   margin-left: 0px;
 	
 }
+.title-job {
+  padding: 5px 0 5px 0;
+  margin: 0;
+}
 .no-right-padding{
 	padding-right: 0px;
 }
 .no-left-padding {
 	padding-left: 0px;
+}
+.no-margin {
+  margin: 0;
 }
 .experience {
 	background: #e3e3e3;
@@ -54,10 +60,8 @@
 }
 .aboutme, .experience {
 	background:#e3e3e3;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 1em 1em 1em 1em;
+  font-size:12px;
 }
 .fromto{
   /*background: linear-gradient(to right,#E6ECF0,white);*/
@@ -70,7 +74,7 @@
 
 }
 .formation span, .experience span, .aboutme span ,.language span {
-  padding:10px;
+  padding: 0 0 0 0.5em;
 }
 .job {
 	background: #e3e3e3;
@@ -81,12 +85,11 @@
   line-height:2em;
 }
 .icon > span {
-  padding: 1em;
+  padding: 0.5em;
 }
-.addr {
-  display: inline-block;
-  width: 90%;
-  line-height: 1.2em;
+.links {
+  font-size: 12px;
+  padding: 0;
 }
 .circle-icon {
 
