--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,4 @@
 .container {
-
   background: #c9c9c9;
 }
 #photo-header{
@@ -7,10 +6,10 @@
   background: #c9c9c9;
 }
 #photo{
-  width: 150px;
-  height: 150px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
-  overflow: hidden;/* what to fo if content element exceeds the size of the element box */
+  overflow: hidden;/* what to do if content element exceeds the size of the element box */
   padding: 5px;
   background: #c9c9c9;
   display: inline-block;
@@ -20,20 +19,25 @@
   z-index: 1;
 }
 #photo img{
-  width: 140px;
-  height: 140px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
 }
 .title-header {
 	background: #e3e3e3;
-  margin-top:-83px;
-  margin-right: 0px;
-  margin-left: 0px;
-	
+  margin:-100px 0 0 0;
 }
 .title-job {
-  padding: 5px 0 5px 0;
+  padding: 0 0 5px 0;
   margin: 0;
+}
+.links {
+  font-size: 12px;
+  padding: 0;
+  line-height: 2em;
+}
+.home {
+  line-height: 1em;
 }
 .no-right-padding{
 	padding-right: 0px;
@@ -44,8 +48,21 @@
 .no-margin {
   margin: 0;
 }
+.aboutme ,.education{
+  background:#e3e3e3;
+  padding: 1em 1em 0 1em;
+  font-size:12px;
+}
+.language ,.tools {
+  border-top: solid 5px #c9c9c9;
+}
 .experience {
-	background: #e3e3e3;
+	background:#e3e3e3;
+  padding: 1em 1em 1em 1em;
+  font-size:12px;
+}
+.formation span, .experience span, .aboutme span ,.language span ,.tools span {
+  padding: 0 0 0 0.5em;
 }
 .job-description {
   font-size: 12px;
@@ -54,53 +71,10 @@
 .job-description ul {
   padding-left: 1.5em;
 }
-.aboutme ,.experience{
-     border-top: solid 5px #c9c9c9;
-     border-right: solid 5px #c9c9c9;
-}
-.education ,.language ,.tools {
-  border-top: solid 5px #c9c9c9;
-
-}
-.aboutme, .experience {
-	background:#e3e3e3;
-  padding: 1em 1em 1em 1em;
-  font-size:12px;
-}
-.fromto{
-  /*background: linear-gradient(to right,#E6ECF0,white);*/
-  font-weight: bold;
-  color: #5BC0DE;
-}
-.formation, .skill {
-   background: #e3e3e3;
-   margin-right: 0px;
-
-}
-.formation span, .experience span, .aboutme span ,.language span ,.tools span {
-  padding: 0 0 0 0.5em;
-}
 .job {
 	background: #e3e3e3;
   padding-top: 100px;
   padding-bottom: 10px;
-}
-.icon {
-  line-height:2em;
-}
-.icon > span {
-  padding: 0.5em;
-}
-.links {
-  font-size: 12px;
-  padding: 0;
-}
-.circle-icon {
-
-  /*border: solid 1px #5551FE;
-  border-radius: 50%;
-  padding:5px;*/
-  color:  #5BC0DE;
 }
 
 /* TIME LINE */
