--- a/resume.css
+++ b/resume.css
@@ -28,7 +28,7 @@ body {-webkit-print-color-adjust: exact;}
 }
 .title-header {
 	background: #e3e3e3;
-  margin:-100px 0 0 0;
+  margin:-100px -25px 0 -25px;
 }
 .title-job {
   padding: 0 0 5px 0;
@@ -49,12 +49,15 @@ body {-webkit-print-color-adjust: exact;}
 	padding-left: 0px;
 }
 .no-margin {
-  margin: 0;
+  margin: 0 0 0.5em 0;
 }
 .aboutme ,.education{
   background:#e3e3e3;
-  padding: 1em 1em 0 1em;
+  padding: 0.2em 1em 0 1em;
   font-size:12px;
+}
+.education {
+  border-top: solid 5px #c9c9c9;
 }
 .language ,.tools {
   border-top: solid 5px #c9c9c9;
@@ -78,6 +81,11 @@ body {-webkit-print-color-adjust: exact;}
 	background: #e3e3e3;
   padding-top: 100px;
   padding-bottom: 10px;
+}
+.column {
+  border-left: 5px solid #c9c9c9;
+  border-right: 5px solid #c9c9c9;
+  border-bottom: 5px solid #c9c9c9;
 }
 /****************************************/
 /*********** TIME LINE ******************/
@@ -136,4 +144,7 @@ body {-webkit-print-color-adjust: exact;}
 }
 .skill {
   background-color: #e3e3e3;
+}
+.tools-item {
+  margin-bottom: 0.5em;
 }
