--- a/resume.css
+++ b/resume.css
@@ -65,10 +65,12 @@ body {-webkit-print-color-adjust: exact;}
   padding: 5px 0 5px 0; 
 }
 .skill-domain {
-  border-top-width: 2px;
-  border-top-style: dashed;
-  border-top-color: #5BC0DE;
-  padding-top: 3px;
+  padding-top: 10px;
+}
+.skill-tools {
+  border-left-width: 2px;
+  border-left-style: dashed;
+  border-left-color: #c9c9c9;
 }
 .experience {
 	background:#e3e3e3;
