--- a/resume.css
+++ b/resume.css
@@ -10,8 +10,8 @@ body {-webkit-print-color-adjust: exact;}
   background: #c9c9c9;
 }
 #photo{
-  width: 110px;
-  height: 110px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   overflow: hidden;/* what to do if content element exceeds the size of the element box */
   padding: 5px;
@@ -23,13 +23,13 @@ body {-webkit-print-color-adjust: exact;}
   z-index: 1;
 }
 #photo img{
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
 }
 .title-header {
 	background: #e3e3e3;
-  margin:-111px -10px 0 -10px;
+  margin:-110px -10px 0 -10px;
   padding: 5px 0 0 0;
 }
 .title-job {
@@ -51,7 +51,7 @@ body {-webkit-print-color-adjust: exact;}
 	padding-left: 0px;
 }
 .no-margin {
-  margin: 0 0 0.5em 0;
+  margin: 0 0 0 0;
 }
 .resume-content {
   background-color: #c9c9c9;
